--- a/web/intranet/console-admin.html
+++ b/web/intranet/console-admin.html
@@ -1,10 +1,9 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
     <head>
 
         <!-- Meta -->
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="Nikos Katsos">
 
@@ -69,7 +68,6 @@
                         <th> X </th>
                     </tr>
                 </table>
-                <a class="add-new"  href="#" onClick="onAddNewCustomer(); return false;"> Προσθήκη νέας εγγραφής... </a>
             </div>
             <div id="salesmen-table" style="display:none;">
                 <table id="salesmen">
