Update intranet javascirpts - Unstable

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,13 @@
         
         <meta charset="UTF-8">
         <title> KaGemCo </title>
+        <!--
         <meta http-equiv="refresh" content="0; url=./internet/index.html">
-
+        -->
     </head>
+    <body>
+        <a href="./intranet/login.html"> <h1>Intranet</h1> </a>
+        <br>
+        <a href="./internet"> <h1> Internet </h1> </a>
+    </body>
 </html>
