Newsletter function is ready (frontend-backend)

--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -138,10 +138,10 @@
                     </div>
                     <div class="col-lg-3 jumbotron">
                         <form onsubmit="onSignupNewsletter(); return false;">
-                            <input type="email" id="email-newsletter" placeholder="E-mail">
-                            <input type="submit" value="Εγγραφφή">
+                            <input class="form-control" type="email" id="email-newsletter" placeholder="E-mail">
+                            <br>
+                            <input class="btn btn-sm btn-primary btn-block" type="submit" value="Εγγραφφή">
                         </form>
-                        <p id="info-newsletter"> </p>
                     </div>
                 </div>
             </div>
