--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -25,7 +25,7 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <script src="js/user.js" async></script>
+        <script src="js/index.js" async></script>
 
     </head>
 
@@ -133,8 +133,8 @@
             <div class="container jumbotron">
                 <div class="row">
                     <div class="col-lg-9">
-                        <h1> Ενημερωθείτε πρώτη για όλες τις νέες προσφορές. </h1>
-                        <p> Ενημερωθείτε πρώτοι για όλες τις νέες προσφορές. </p>
+                        <h1>Ενημερωθείτε πρώτη για όλες τις νέες προσφορές.</h1>
+                        <p>Ενημερωθείτε πρώτοι για όλες τις νέες προσφορές.</p>
                     </div>
                     <div class="col-lg-3 jumbotron">
                         <form onsubmit="onSignupNewsletter(); return false;">
@@ -165,10 +165,9 @@
         </a>
 
 <scripts>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrolling-nav.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 </scripts>
 </body>
 </html>
