--- a/web/internet/login.html
+++ b/web/internet/login.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="el, en">
-<head>
+    <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="KaGemCo Telecommunications">
-    <meta name="author" content="Nikos Katsos">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="KaGemCo Telecommunications">
+        <meta name="author" content="Nikos Katsos">
 
-    <title>KaGemCo</title>
+        <title>KaGemCo</title>
 
-    <!-- redirect user if javascript is not enabled -->
-    <noscript>
-      <meta http-equiv="refresh" content="0; url=./enable-js.html" />;
-    </noscript>
+        <!-- redirect user if javascript is not enabled -->
+        <noscript>
+            <meta http-equiv="refresh" content="0; url=./enable-js.html" />
+        </noscript>
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/custom.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
-    <script src="js/user.js" async></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="js/login.js" async></script>
 
-	<style>
-		input {
-			text-align: center;
-			margin-bottom: 5px;
-		}
-		button {
-			margin-bottom: 5px;
-		}
-	</style>
-	
-</head>
-<body>
-	<div class="container">
-		<h3 class="text-center">Συνδεθείτε στο έμπιστο δίκτυο της KaGemCo</h3>
-		<br>
-		<form class="form-signin col-lg-offset-4 col-lg-4">
-			<input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-			<input type="password" id="inputPassword" class="form-control" placeholder="Κωδικός" required>
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Σύνδεση</button>
-		</form>
+        <style>
+            input {
+                text-align: center;
+                margin-bottom: 5px;
+            }
+            button {
+                margin-bottom: 5px;
+            }
+        </style>
 
-    </div>
-</body>
+    </head>
+    <body>
+        <div class="container">
+            <h3 class="text-center">Συνδεθείτε στο έμπιστο δίκτυο της KaGemCo</h3>
+            <br>
+            <form class="form-signin col-lg-offset-4 col-lg-4" onsubmit="onLogin(); return false;">
+                <input type="text" id="username" class="form-control" placeholder="Ψευδώνυμο" required autofocus>
+                <input type="password" id="password" class="form-control" placeholder="Κωδικός" required>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Σύνδεση</button>
+            </form>
+
+        </div>
+    </body>
+</html>
