--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -25,8 +25,6 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <script src="js/index.js" async></script>
-
     </head>
 
     <!-- #page-top ID for the scrolling feature
@@ -74,8 +72,7 @@
                             <a href="#">Όνομα Χρήστη</a>
                         </li>
                         <li id="logout">
-                            <a href="#" onclick="onLogout();
-                                    return false;">Αποσύνδεση</a>
+                            <a href="#" onclick="onLogout(); return false;">Αποσύνδεση</a>
                         </li>
                     </ul>
                 </div>
@@ -168,6 +165,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/index.js"></script>
 </scripts>
 </body>
 </html>
