index my-account login connected

--- a/web/internet/my-account.html
+++ b/web/internet/my-account.html
@@ -25,6 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="js/my-account.js"></script>
 </head>
 <body>
@@ -33,39 +34,35 @@
     <table class="table-bordered  col-lg-offset-3 col-lg-4">
       <tr>
         <th> Ψευδώνυμο </th>
-        <td> </td>
+        <td id="username"> </td>
       </tr>
       <tr>
         <th> Ε-mail </th>
-        <td> </td>
+        <td id="email"> </td>
       </tr>
       <tr>
         <th> Υπόλοιπο </th>
-        <td> </td>
+        <td id="credits"> </td>
       </tr>
       <tr>
         <th> Όνομα </th>
-        <td> </td>
+        <td id="name"> </td>
       </tr>
       <tr>
         <th> Επίθετο </th>
-        <td> </td>
+        <td id="surname"> </td>
       </tr>
       <tr>
         <th> ΑΦΜ </th>
-        <td> </td>
+        <td id="taxID"> </td>
       </tr>
       <tr>
         <th> Αρ. Λογαρ. Τραπέζης </th>
-        <td> </td>
+        <td id="bankAccount"> </td>
       </tr>
       <tr>
     </table>
   </main>
 
-<scripts>
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-</scripts>
 </body>
 </html>
