--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -69,7 +69,7 @@
                             <a href="./login.html">Σύνδεση</a>
                         </li>
                         <li id="username">
-                            <a href="#">Όνομα Χρήστη</a>
+                            <a href="./my-account.html">Όνομα Χρήστη</a>
                         </li>
                         <li id="logout">
                             <a href="#" onclick="onLogout(); return false;">Αποσύνδεση</a>
