--- a/web/internet/my-account.html
+++ b/web/internet/my-account.html
@@ -30,8 +30,8 @@
 </head>
 <body>
 
-  <main class="container row">
-    <table class="table-bordered  col-lg-offset-3 col-lg-4">
+  <main class="container">
+    <table class="table-bordered row">
       <tr>
         <th> Ψευδώνυμο </th>
         <td id="username"> </td>
@@ -62,6 +62,17 @@
       </tr>
       <tr>
     </table>
+      
+      <form class="row" onsubmit="onRecharge(); return false;">
+          <h4> Ανανέωση λογιαριασμού </h4>
+          <span> Αριθμός τηλεφώνου: </span>
+          <input type="number" id="phone-number" required>
+          <br>
+          <span> Ποσό πίστωσης: </span>
+          <input type="number" id="amount" required>
+          <br>
+          <input type="submit" value="Ανανέωση">
+      </form>
   </main>
 
 </body>
