My-account presentation is ready

--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE>
 <html>
     <head>
-        
+
         <meta charset="UTF-8">
         <title> KaGemCo </title>
-        <meta http-equiv="refresh" content="0; url=./internet/index.html">
+
+        <noscript>
+        <meta http-equiv="refresh" content="0; url=./internet/index.html">        
+        </noscript>
 
     </head>
+    <body>
+
+        <a href="./internet"> <h2>Internet</h2> </a>
+        <a href="./intarnet"> <h2>Intarnet</h2> </a>
+
+    </body>
+
 </html>
