pseudo-new-account-request is ready

--- a/web/internet/my-account.html
+++ b/web/internet/my-account.html
@@ -47,7 +47,7 @@
         <main class="container jumbotron">
             <div class="row">
 
-                <div class="col-lg-offset-4 col-lg-4">
+                <div class="left">
 
                     <h4> Στοιχεία Λογαριασμού </h4>
 
@@ -79,10 +79,9 @@
                         <tr>
                     </table>
                 </div>
-
             </div>
-            <br>
-            <div class="row">
+
+            <div class="row right">
                 <div class="col-lg-offset-4 col-lg-4">
 
                     <h4> Ανανέωση χρόνου ομιλίας </h4>
@@ -122,6 +121,12 @@
                             </tr>
                         </table>
                     </form>
+                </div>
+            </div>
+            <br>
+            <div class="row" id="new-number">
+                <div class="col-lg-offset-4 col-lg-4">
+                    <a class="btn btn-primary btn-sm" href="#" onclick="onNewNumber(); return false;" > Αίτηση νέου αριθμού </a>
                 </div>
             </div>
         </main>
