Customer-NewAccount functionality added

--- a/web/internet/my-account.html
+++ b/web/internet/my-account.html
@@ -47,7 +47,7 @@
         <main class="container jumbotron">
             <div class="row">
 
-                <div class="left">
+                <div class="col-lg-offset-4 col-lg-4">
 
                     <h4> Στοιχεία Λογαριασμού </h4>
 
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="row right">
+            <div class="row">
                 <div class="col-lg-offset-4 col-lg-4">
 
                     <h4> Ανανέωση χρόνου ομιλίας </h4>
