Manager-console getting requests

--- a/web/index.html
+++ b/web/index.html
@@ -6,14 +6,14 @@
         <title> KaGemCo </title>
 
         <noscript>
-        <meta http-equiv="refresh" content="0; url=./internet/index.html">        
+            <meta http-equiv="refresh" content="0; url=./internet/enable-js.html">        
         </noscript>
 
     </head>
     <body>
 
         <a href="./internet"> <h2>Internet</h2> </a>
-        <a href="./intarnet"> <h2>Intarnet</h2> </a>
+        <a href="./intranet"> <h2>Intranet</h2> </a>
 
     </body>
 
