--- a/web/intranet/console-manager.html
+++ b/web/intranet/console-manager.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="author" content="Nikos Katsos">
+
+        <title>Welcome Admin</title>
+        <link href="./css/console.css" rel="stylesheet">
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="./js/console-manager.js" async></script>
+        
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body id="manager-console">
+
+        <header>
+            <ul class="options">
+                <li class="log-out-li">
+                    <a class="log-out button" href="#" onClick="onLogout(); return false;">  Αποσύνδεση  </a>
+                </li>
+            </ul>
+        </header>
+
+        <main>
+            <div id="requests-table">
+                <table id="requests"> 
+                    <tr>
+                        <th> Μοναδικός Αριθμός </th>
+                        <th> Περιγραφή </th>
+                        <th> Κατάσταση </th>
+                        <th> - </th>
+                        <th> Χ </th>
+                    </tr>
+                </table>
+            </div>
+        </main>
     </body>
 </html>
