--- a/web/intranet/login.html
+++ b/web/intranet/login.html
@@ -10,6 +10,7 @@
             body {
                 color: white;
                 background-color: rgba( 0, 126, 128, 1);
+                text-align: center;
             }
             main {
                 padding-top: 30px;
