Content of about updated - Unstable commit

--- a/web/internet/donation.html
+++ b/web/internet/donation.html
@@ -8,7 +8,7 @@
         <meta name="description" content="KaGemCo Telecommunications">
         <meta name="author" content="Nikos Katsos">
 
-        <title>KaGemCo</title>
+        <title>KaGemCo - Δωρεά</title>
 
         <!-- redirect user if javascript is not enabled -->
         <noscript>
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-default navbar-static-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand navbar-brand-center" href="./index.html">KaGemCo</a>
+                    <a class="navbar-brand" href="./index.html">KaGemCo</a>
                 </div>
         
         </nav>
