Internet-Index minor-bug-fixes

--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -141,7 +141,7 @@
                 </div>
                 
             </div>
-            <a class="btn btn-default btn-circle btn-lg page-scroll" href="#contact">
+            <a class="btn btn-default btn-circle btn-lg page-scroll" href="#newsletter">
                 <span class="glyphicon glyphicon-chevron-down" area-hidden="false"></span>
             </a>
         </section>
