Internet(full) content is ready

--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1> KG - Όπως λέμε οικονομία και επικοινωνία. </h1>
-                        <p> mpla mpla mpla kai sou pa mou pes tou eipes kai tis sou eipa.
+                        <p> Απλά η οικονομικότερη εταιρία κινητής τηλεφωνίας στην Ελλάδα.
                         </p>
                     </div>
                 </div>
@@ -151,7 +151,8 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <h1>Ενημερωθείτε πρώτη για όλες τις νέες προσφορές.</h1>
-                        <p>Ενημερωθείτε πρώτοι για όλες τις νέες προσφορές.</p>
+                        <p>Ενημερωθείτε για τις προσφορές και την κοινωνική δράση της εταιρίας 
+                            <br> και συμβάλετε μαζί μας στο κοινωφελές έργο.</p>
                     </div>
                     <div class="col-lg-3 jumbotron">
                         <form onsubmit="onSignupNewsletter(); return false;">
