Internet-index complete - Some issues with large screens

--- a/web/internet/index.html
+++ b/web/internet/index.html
@@ -12,7 +12,7 @@
 
         <!-- redirect user if javascript is not enabled -->
         <noscript>
-            <meta http-equiv="refresh" content="0; url=./enable-js.html">
+        <meta http-equiv="refresh" content="0; url=./enable-js.html">
         </noscript>
 
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -72,8 +72,7 @@
                             <a href="./my-account.html">Όνομα Χρήστη</a>
                         </li>
                         <li id="logout">
-                            <a href="#" onclick="onLogout();
-                                    return false;">Αποσύνδεση</a>
+                            <a href="#" onclick="onLogout(); return false;">Αποσύνδεση</a>
                         </li>
                     </ul>
                 </div>
@@ -110,6 +109,9 @@
                         </p>
                     </div>
                 </div>
+                <div class="row">
+                    <a class="col-lg-offset-10" href="services.html"> περισσότερα... </a>
+                </div>
             </div>
             <a class="btn btn-default btn-circle btn-lg page-scroll" href="#donation">
                 <span class="glyphicon glyphicon-chevron-down" area-hidden="false"></span>
@@ -125,6 +127,9 @@
                             Κάνοντας δωρεά, χαρίζεις χαμόγελα σε ανθρώπου που έχουν την ανάγκη σου και χαλάς λιγότερα στα σούπερ μάρκετ καπιτάλα φίλε μου.
                         </p>
                     </div>
+                    <div class="row">
+                    <a class="col-lg-offset-10" href="donation.html"> περισσότερα... </a>
+                </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-offset-2 col-xs-8">
@@ -135,11 +140,11 @@
                         </form>
                     </div>
                 </div>
-                
+
                 <div class="row">
                     <a class="col-lg-offset-10" href="donation.html"> περισσότερα... </a>
                 </div>
-                
+
             </div>
             <a class="btn btn-default btn-circle btn-lg page-scroll" href="#newsletter">
                 <span class="glyphicon glyphicon-chevron-down" area-hidden="false"></span>
@@ -155,7 +160,7 @@
                             <br> και συμβάλετε μαζί μας στο κοινωφελές έργο.</p>
                     </div>
                     <div class="col-lg-3 jumbotron">
-                        <form onsubmit="onSignupNewsletter(); return false;">
+                        <form onsubmit="onSignupNewsletter();return false;">
                             <input class="form-control" type="email" id="email-newsletter" placeholder="E-mail">
                             <br>
                             <input class="btn btn-sm btn-primary btn-block" type="submit" value="Εγγραφφή">
@@ -174,8 +179,6 @@
                     <div class="col-lg-12">
 
                         <h1>Επικοινωνία</h1>
-
-
 
                         <p> Μπορείτε να έλθετε σε επαφή μαζί μας, με τους εξής τρόπους:
                             <br> Καλώντας στα παρακάτω τηλέφωνα:
